Revert HelloWorldExample. Add HelloWorldExampleGaps

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(C++/DynamicHelloWorldExample)
 add_subdirectory(C++/HelloWorldExample)
 add_subdirectory(C++/HelloWorldExampleTCP)
 add_subdirectory(C++/HelloWorldExampleSharedMem)
+add_subdirectory(C++/HelloWorldExampleGaps)
 add_subdirectory(C++/Filtering)
 add_subdirectory(C++/UserDefinedTransportExample)
 add_subdirectory(C++/FlowControlExample)
